# libict-reflection

./: README.md  compare.bsh
source/: CMakeLists.txt  all.hpp  definition.cpp  definition.hpp  info.cpp  info.hpp  meta-map.cpp  meta-map.hpp  meta-vector.cpp  meta-vector.hpp  meta.cpp  meta.hpp  process.cpp  process.hpp  processor-array.cpp  processor-array.hpp  processor-context.cpp  processor-context.hpp  processor-structure.cpp  processor-structure.hpp  processor-vector.cpp  processor-vector.hpp  processor.cpp  processor.hpp  types.cpp  types.hpp
